feat(commands): Added raw versions of /loop, /skip and /clear commands